fixing the signup title on small screens

--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -247,7 +247,7 @@
       margin-bottom: 2rem;
       .signup-form {
         height: 100%;
-        width: 50%;
+        min-width: 50%;
         @include media("<=desktop") {
           height: 70%;
           width: 60%;
